--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>
 <a id="alanzhang52githubio" class="anchor" href="#alanzhang52githubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>alanzhang52.github.io</h1>
 
-<p>same</p>
+<p>same same same</p>
 
       <footer class="site-footer">
 
@@ -28,6 +28,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
